nouveau design appliquées + création page html annexe

--- a/html/reglements.html
+++ b/html/reglements.html
@@ -10,78 +10,141 @@
     <link rel="stylesheet" href="../styles/reglements.css"/>
     <link rel="stylesheet" href="../assets/Fontawesome/css/all.css">
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Caesar+Dressing&family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <title>Réglements FF-Judo</title>
 </head>
 
 <body>
-
     <header>
         <div class="cadre-titre">
-            <img src="../assets/img/accueil/icon.svg" alt="logo du judo-club de Fénétrange" class="logo-jcf">
-            <h1 class="titre">JUDO CLUB<br> DE<br> FÉNÉTRANGE</h1>
+            <img src="../assets/img/accueil/Judo-caligraphie-red.svg" alt="logo du judo-club de Fénétrange"
+                class="logo-jcf">
+            <h1 class="titre">JUDO CLUB<br>FENETRANGE</h1>
             <img src="../assets/img/accueil/Logo_FF_Judo_DA.svg" alt="logo FFJDA" class="logo-ffjda">
         </div>
         <nav>
-            <a href="../index.html" class="naviguation">Activités</a>
-            <a href="../html/membres.html" class="naviguation">Membres</a>
-            <a href="../html/agenda.html" class="naviguation">Agenda</a>
-            <a href="../html/actualites.html" class="naviguation">Actualités</a>
-            <a href="../html/resultats.html" class="naviguation">Résultats</a>
-            <a href="" class="naviguation page-active">Règlements</a>
-            <a href="../html/grades.html" class="naviguation">Grades</a>
-            <a href="../html/gallerie.html" class="naviguation">Gallerie</a>
-            <a href="../html/encyclopedie.html" class="naviguation">Encyclopédie</a>
+            <div class="naviguation">
+                <a href="../index.html" class="lien-nav">Activités</a>
+            </div>
+            <div class="naviguation">
+                <a href="../html/membres.html" class="lien-nav">Membres</a>
+            </div>
+            <div class="naviguation">
+                <a href="../html/agenda.html" class="lien-nav">Agenda</a>
+            </div>
+            <div class="naviguation">
+                <a href="../html/actualites.html" class="lien-nav">Actualités</a>
+            </div>
+            <div class="naviguation">
+                <a href="../html/resultats.html" class="lien-nav">Résultats</a>
+                <div class="nav-rapide">
+                    <a href="../html/results/results.html" class="lien-rapide">Tournoi des petits-tigres</a>
+                    <a href="../html/results/results.html" class="lien-rapide">Coupe de Moselle Benjamins(ines)</a>
+                    <a href="../html/results/results.html" class="lien-rapide">Championnat Grand-Est Minimes</a>
+                    <a href="../html/results/results.html" class="lien-rapide">Championnat Inter-Région Juniors</a>
+                    <a href="../html/results/results.html" class="lien-rapide">Coupe de France par équipe</a>
+                </div>
+            </div>
+            <div class="naviguation page-active">
+                <a href="../html/reglements.html" class="lien-actif">Règlements</a>
+                <div class="nav-rapide">
+                    <a class="lien-rapide" download="Reglement-interieur.pdf" href="../assets/documents/reglements/Règlement Intérieur.pdf">Télécharger le règlement intérieur</a>
+                    <a class="lien-rapide" download="Code-Sportif-2021-2022.pdf" href="../assets/documents/reglements/CODE SPORTIF 2021.2022.pdf">Télécharger le Code Sportif</a>
+                    <a class="lien-rapide" download="Texte-Officiel-2021-2022.pdf" href="../assets/documents/reglements/TEXTES_OFF_2021 2022 Interactif.pdf">Télécharger les textes Officiels</a>
+                    <a class="lien-rapide" download="Enseignement-Formation-2021-2022" href="../assets/documents/reglements/ENSEIGNEMENT ET FORMATION 2021.2022.pdf">Télécharger le guide d'enseignement et formation</a>
+                    <a class="lien-rapide" download="Licence-Contrat-2021-2022" href="../assets/documents/reglements/LICENCE. CONTRAT CLUB 2021.2022.pdf">Télécharger le document de licence et contrat</a>
+                    <a class="lien-rapide" download="Arbitage-International-FIJ-2020" href="../assets/documents/reglements/Réglement arbitrage FIJ - été 2020_Rul-1597761161.pdf">Télécharger le règlement d'arbitrage International</a>
+                    <a class="lien-rapide" download="Arbitrage-National-2021" href="../assets/documents/reglements/ReglementNationalJudoFrancais_CNA_07_21.pdf">Télécharger le règlement d'arbitrage National</a>
+                </div>
+            </div>
+            <div class="naviguation">
+                <a href="../html/grades.html" class="lien-nav">Grades</a>
+                <div class="nav-rapide">
+                    <a href="../html/grades.html#1deg" class="lien-rapide">Blanche 1er degrès</a>
+                    <a href="../html/grades.html#b-jaune" class="lien-rapide">Blanche-Jaune</a>
+                    <a href="../html/grades.html#jaune" class="lien-rapide">Jaune</a>
+                    <a href="../html/grades.html#j-orange" class="lien-rapide">Jaune-Orange</a>
+                    <a href="../html/grades.html#orange" class="lien-rapide">Orange</a>
+                    <a href="../html/grades.html#o-verte" class="lien-rapide">Orange-Verte</a>
+                    <a href="../html/grades.html#verte" class="lien-rapide">Verte</a>
+                    <a href="../html/grades.html#v-bleue" class="lien-rapide">Verte-Bleue</a>
+                    <a href="../html/grades.html#bleue" class="lien-rapide">Bleue</a>
+                    <a href="../html/grades.html#marron" class="lien-rapide">Marron</a>
+                    <a href="../html/grades.html#1dan" class="lien-rapide">Kata 1er Dan</a>
+                    <a href="../html/grades.html#2dan" class="lien-rapide">Kata 2ème Dan</a>
+                    <a href="../html/grades.html#3dan" class="lien-rapide">Kata 3ème Dan</a>
+                    <a href="../html/grades.html#tech1" class="lien-rapide">Expression Technique 1er Dan</a>
+                </div>
+            </div>
+            <div class="naviguation">
+                <a href="../html/gallerie.html" class="lien-nav">Gallerie</a>
+                <div class="nav-rapide">
+                    <a href="../html/21-22/medias.html" class="lien-rapide">Saison 2021/2022</a>
+                    <a href="../html/21-22/medias.html" class="lien-rapide">Saison 2020/2021</a>
+                    <a href="../html/21-22/medias.html" class="lien-rapide">Saison 2019/2020</a>
+                    <a href="../html/21-22/medias.html" class="lien-rapide">Saison 2018/2019</a>
+                    <a href="../html/21-22/medias.html" class="lien-rapide">Saison 2017/2018</a>
+                </div>
+            </div>
+            <div class="naviguation">
+                <a href="../html/encyclopedie.html" class="lien-nav">Encyclopédie</a>
+                <div class="nav-rapide">
+                    <a href="../html/encyclopedie/histoire-judo.html" class="lien-rapide">Histoire du Judo</a>
+                    <a href="../html/encyclopedie/histoire-club.html" class="lien-rapide">Histoire du Club</a>
+                    <a href="../html/encyclopedie/categories.html" class="lien-rapide">Poids & Catégories</a>
+                </div>
+            </div>
         </nav>
     </header>
     <main>
-        <section class="section-reglement">
-            <h2 class="titre-media">LES RÈGLEMENTS</h2>
-            <div id="liste" class="liste">
-                <a class="reglement" download="Reglement-interieur.pdf" href="../assets/documents/reglements/Règlement Intérieur.pdf">
-                    <span class="telecharger">Télécharger le Règlement Intérieur</span> 
-                    <img src="../assets/documents/reglements/logo-découpé.png">
-                </a>
-                <a class="reglement" download="Code-Sportif-2021-2022.pdf" href="../assets/documents/reglements/CODE SPORTIF 2021.2022.pdf">
-                    <span class="telecharger">Télécharger le Code Sportif</span> 
-                    <img src="../assets/documents/reglements/Logo_FF_Judo_DA.svg">
-                </a>
-                <a class="reglement" download="Texte-Officiel-2021-2022.pdf" href="../assets/documents/reglements/TEXTES_OFF_2021 2022 Interactif.pdf">
-                    <span class="telecharger">Télécharger les Textes Officiels</span> 
-                    <img src="../assets/documents/reglements/Logo_FF_Judo_DA.svg">
-                </a>
-                <a class="reglement" download="Enseignement-Formation-2021-2022" href="../assets/documents/reglements/ENSEIGNEMENT ET FORMATION 2021.2022.pdf">
-                    <span class="telecharger">Télécharger le guide d'enseignement et formation</span> 
-                    <img src="../assets/documents/reglements/Logo_FF_Judo_DA.svg">
-                </a>
-                <a class="reglement" download="Licence-Contrat-2021-2022" href="../assets/documents/reglements/LICENCE. CONTRAT CLUB 2021.2022.pdf">
-                    <span class="telecharger">Télécharger le document de licence et contrat</span> 
-                    <img src="../assets/documents/reglements/Logo_FF_Judo_DA.svg">
-                </a>
-                <a class="reglement" download="Arbitage-International-FIJ-2020" href="../assets/documents/reglements/Réglement arbitrage FIJ - été 2020_Rul-1597761161.pdf">
-                    <span class="telecharger">Télécharger le règlement d'arbitrage International</span> 
-                    <img src="../assets/documents/reglements/AppIcon98x98@2x.png">
-                </a>
-                <a class="reglement" download="Arbitrage-National-2021" href="../assets/documents/reglements/ReglementNationalJudoFrancais_CNA_07_21.pdf">
-                    <span class="telecharger">Télécharger le règlement d'arbitrage National</span> 
-                    <img src="../assets/documents/reglements/AppIcon98x98@2x.png">
-                </a>
-            </div>
-        </section>
+        <div class="principal-content">
+            <section class="section-principal">
+                <h2 class="titre-section">LES RÈGLEMENTS</h2>
+                <div id="liste" class="liste">
+                    <a class="reglement" download="Reglement-interieur.pdf" href="../assets/documents/reglements/Règlement Intérieur.pdf">
+                        <span class="telecharger">Télécharger le Règlement Intérieur</span> 
+                        <img src="../assets/documents/reglements/logo-découpé.png">
+                    </a>
+                    <a class="reglement" download="Code-Sportif-2021-2022.pdf" href="../assets/documents/reglements/CODE SPORTIF 2021.2022.pdf">
+                        <span class="telecharger">Télécharger le Code Sportif</span> 
+                        <img src="../assets/documents/reglements/Logo_FF_Judo_DA.svg">
+                    </a>
+                    <a class="reglement" download="Texte-Officiel-2021-2022.pdf" href="../assets/documents/reglements/TEXTES_OFF_2021 2022 Interactif.pdf">
+                        <span class="telecharger">Télécharger les Textes Officiels</span> 
+                        <img src="../assets/documents/reglements/Logo_FF_Judo_DA.svg">
+                    </a>
+                    <a class="reglement" download="Enseignement-Formation-2021-2022" href="../assets/documents/reglements/ENSEIGNEMENT ET FORMATION 2021.2022.pdf">
+                        <span class="telecharger">Télécharger le guide d'enseignement et formation</span> 
+                        <img src="../assets/documents/reglements/Logo_FF_Judo_DA.svg">
+                    </a>
+                    <a class="reglement" download="Licence-Contrat-2021-2022" href="../assets/documents/reglements/LICENCE. CONTRAT CLUB 2021.2022.pdf">
+                        <span class="telecharger">Télécharger le document de licence et contrat</span> 
+                        <img src="../assets/documents/reglements/Logo_FF_Judo_DA.svg">
+                    </a>
+                    <a class="reglement" download="Arbitage-International-FIJ-2020" href="../assets/documents/reglements/Réglement arbitrage FIJ - été 2020_Rul-1597761161.pdf">
+                        <span class="telecharger">Télécharger le règlement d'arbitrage International</span> 
+                        <img src="../assets/documents/reglements/AppIcon98x98@2x.png">
+                    </a>
+                    <a class="reglement" download="Arbitrage-National-2021" href="../assets/documents/reglements/ReglementNationalJudoFrancais_CNA_07_21.pdf">
+                        <span class="telecharger">Télécharger le règlement d'arbitrage National</span> 
+                        <img src="../assets/documents/reglements/AppIcon98x98@2x.png">
+                    </a>
+                </div>
+            </section>
+        </div>
     </main>
     <footer>
         <div class="liens-off">
-            <a id="social" href="https://www.ffjudo.com/" class="social">
-                <img id="social-link" class="facebook" src="../assets/img/accueil/Logo_France_Judo.png" alt="Fédération ffjudo">
+            <a id="lien-france-judo" href="https://www.ffjudo.com/" class="social">
+                <img id="logo-france-judo" class="logo-lien-footer" src="../assets/img/accueil/Logo_France_Judo.png" alt="Fédération france judo">
             </a>
-            <a id="social" href="https://www.judograndest.fr/" class="social">
-                <img id="social-link" class="facebook" src="../assets/img/accueil/LOGO-judo-grand-est-retina-1-1.png" alt="Ligue Grand-Est de Judo">
+            <a id="lien-grand-est" href="https://www.judograndest.fr/" class="social">
+                <img id="logo-grand-est" class="logo-lien-footer" src="../assets/img/accueil/LOGO-judo-grand-est-retina-1-1.png" alt="Ligue judo Grand-Est">
             </a>
-            <a id="social" href="https://www.judo-moselle.fr/" class="social">
-                <img id="social-link" class="moselle" src="../assets/img/accueil/moselle-logo.png" alt="Comité de Moselle Judo">
+            <a id="lien-moselle" href="https://www.judo-moselle.fr/" class="social">
+                <img id="logo-moselle" class="moselle" src="../assets/img/accueil/moselle-logo.png" alt="Comité de Moselle de judo">
             </a>
-            <a id="social" href="https://www.facebook.com/judoclubf/" class="social">
-                <img id="social-link" class="facebook" src="../assets/img/accueil/facebook.png" alt="Facebook du judo-club de Fénétrange">
+            <a id="lien-facebook" href="https://www.facebook.com/judoclubf/" class="social">
+                <img id="logo-facebook" class="logo-lien-footer" src="../assets/img/accueil/facebook.png" alt="Facebook du judo-club">
             </a>
         </div>
         <div class="liens-contact">
