--- a/index.html
+++ b/index.html
@@ -6,19 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Site du judo club de Fénétrange. Activités du judo-club.">
-    <meta name="keywords"
-        content="judo, judogi, judoka, judokas, judokatte, judokattes, ceinture, ceintures, sports, sport, lorraine, moselle, fénétrange">
+    <meta name="keywords" content="judo, judogi, judoka, judokas, judokatte, judokattes, ceinture, ceintures, sports, sport, lorraine, moselle, fénétrange">
     <link rel="shortcut icon" href="assets/img/ceintures/Judo_red_white_belt.svg" type="image/x-icon">
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="assets/Fontawesome/css/all.css">
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Caesar+Dressing&family=Source+Sans+Pro&display=swap"
-        rel="stylesheet">
     <title>Judo-Club Fénétrange</title>
 </head>
 
 <body>
-
     <header>
         <div class="cadre-titre">
             <img src="assets/img/accueil/Judo-caligraphie-red.svg" alt="logo du judo-club de Fénétrange"
@@ -42,42 +38,42 @@
             <div class="naviguation">
                 <a href="html/resultats.html" class="lien-nav">Résultats</a>
                 <div class="nav-rapide">
-                    <a href="" class="lien-rapide">Tournoi des petits-tigres</a>
-                    <a href="" class="lien-rapide">Coupe de Moselle Benjamins(ines)</a>
-                    <a href="" class="lien-rapide">Championnat Grand-Est Minimes</a>
-                    <a href="" class="lien-rapide">Championnat Inter-Région Juniors</a>
-                    <a href="" class="lien-rapide">Coupe de France par équipe</a>
+                    <a href="html/results/results.html" class="lien-rapide">Tournoi des petits-tigres</a>
+                    <a href="html/results/results.html" class="lien-rapide">Coupe de Moselle Benjamins(ines)</a>
+                    <a href="html/results/results.html" class="lien-rapide">Championnat Grand-Est Minimes</a>
+                    <a href="html/results/results.html" class="lien-rapide">Championnat Inter-Région Juniors</a>
+                    <a href="html/results/results.html" class="lien-rapide">Coupe de France par équipe</a>
                 </div>
             </div>
             <div class="naviguation">
                 <a href="html/reglements.html" class="lien-nav">Règlements</a>
                 <div class="nav-rapide">
-                    <a class="lien-rapide" download="Reglement-interieur.pdf" href="../assets/documents/reglements/Règlement Intérieur.pdf">Télécharger le règlement intérieur</a>
-                    <a class="lien-rapide" download="Code-Sportif-2021-2022.pdf" href="../assets/documents/reglements/CODE SPORTIF 2021.2022.pdf">Télécharger le Code Sportif</a>
-                    <a class="lien-rapide" download="Texte-Officiel-2021-2022.pdf" href="../assets/documents/reglements/TEXTES_OFF_2021 2022 Interactif.pdf">Télécharger les textes Officiels</a>
-                    <a class="lien-rapide" download="Enseignement-Formation-2021-2022" href="../assets/documents/reglements/ENSEIGNEMENT ET FORMATION 2021.2022.pdf">Télécharger le guide d'enseignement et formation</a>
-                    <a class="lien-rapide" download="Licence-Contrat-2021-2022" href="../assets/documents/reglements/LICENCE. CONTRAT CLUB 2021.2022.pdf">Télécharger le document de licence et contrat</a>
-                    <a class="lien-rapide" download="Arbitage-International-FIJ-2020" href="../assets/documents/reglements/Réglement arbitrage FIJ - été 2020_Rul-1597761161.pdf">Télécharger le règlement d'arbitrage International</a>
-                    <a class="lien-rapide" download="Arbitrage-National-2021" href="../assets/documents/reglements/ReglementNationalJudoFrancais_CNA_07_21.pdf">Télécharger le règlement d'arbitrage National</a>
+                    <a class="lien-rapide" download="Reglement-interieur.pdf" href="assets/documents/reglements/Règlement Intérieur.pdf">Télécharger le règlement intérieur</a>
+                    <a class="lien-rapide" download="Code-Sportif-2021-2022.pdf" href="assets/documents/reglements/CODE SPORTIF 2021.2022.pdf">Télécharger le Code Sportif</a>
+                    <a class="lien-rapide" download="Texte-Officiel-2021-2022.pdf" href="assets/documents/reglements/TEXTES_OFF_2021 2022 Interactif.pdf">Télécharger les textes Officiels</a>
+                    <a class="lien-rapide" download="Enseignement-Formation-2021-2022" href="assets/documents/reglements/ENSEIGNEMENT ET FORMATION 2021.2022.pdf">Télécharger le guide d'enseignement et formation</a>
+                    <a class="lien-rapide" download="Licence-Contrat-2021-2022" href="assets/documents/reglements/LICENCE. CONTRAT CLUB 2021.2022.pdf">Télécharger le document de licence et contrat</a>
+                    <a class="lien-rapide" download="Arbitage-International-FIJ-2020" href="assets/documents/reglements/Réglement arbitrage FIJ - été 2020_Rul-1597761161.pdf">Télécharger le règlement d'arbitrage International</a>
+                    <a class="lien-rapide" download="Arbitrage-National-2021" href="assets/documents/reglements/ReglementNationalJudoFrancais_CNA_07_21.pdf">Télécharger le règlement d'arbitrage National</a>
                 </div>
             </div>
             <div class="naviguation">
                 <a href="html/grades.html" class="lien-nav">Grades</a>
                 <div class="nav-rapide">
-                    <a href="" class="lien-rapide">Blanche 1er degrès</a>
-                    <a href="" class="lien-rapide">Blanche-Jaune</a>
-                    <a href="" class="lien-rapide">Jaune</a>
-                    <a href="" class="lien-rapide">Jaune-Orange</a>
-                    <a href="" class="lien-rapide">Orange</a>
-                    <a href="" class="lien-rapide">Orange-Verte</a>
-                    <a href="" class="lien-rapide">Verte</a>
-                    <a href="" class="lien-rapide">Verte-Bleue</a>
-                    <a href="" class="lien-rapide">Bleue</a>
-                    <a href="" class="lien-rapide">Marron</a>
-                    <a href="" class="lien-rapide">Kata 1er Dan</a>
-                    <a href="" class="lien-rapide">Kata 2ème Dan</a>
-                    <a href="" class="lien-rapide">Kata 3ème Dan</a>
-                    <a href="" class="lien-rapide">Expression Technique 1er Dan</a>
+                    <a href="html/grades.html#1deg" class="lien-rapide">Blanche 1er degrès</a>
+                    <a href="html/grades.html#b-jaune" class="lien-rapide">Blanche-Jaune</a>
+                    <a href="html/grades.html#jaune" class="lien-rapide">Jaune</a>
+                    <a href="html/grades.html#j-orange" class="lien-rapide">Jaune-Orange</a>
+                    <a href="html/grades.html#orange" class="lien-rapide">Orange</a>
+                    <a href="html/grades.html#o-verte" class="lien-rapide">Orange-Verte</a>
+                    <a href="html/grades.html#verte" class="lien-rapide">Verte</a>
+                    <a href="html/grades.html#v-bleue" class="lien-rapide">Verte-Bleue</a>
+                    <a href="html/grades.html#bleue" class="lien-rapide">Bleue</a>
+                    <a href="html/grades.html#marron" class="lien-rapide">Marron</a>
+                    <a href="html/grades.html#1dan" class="lien-rapide">Kata 1er Dan</a>
+                    <a href="html/grades.html#2dan" class="lien-rapide">Kata 2ème Dan</a>
+                    <a href="html/grades.html#3dan" class="lien-rapide">Kata 3ème Dan</a>
+                    <a href="html/grades.html#tech1" class="lien-rapide">Expression Technique 1er Dan</a>
                 </div>
             </div>
             <div class="naviguation">
@@ -93,17 +89,17 @@
             <div class="naviguation">
                 <a href="html/encyclopedie.html" class="lien-nav">Encyclopédie</a>
                 <div class="nav-rapide">
-                    <a href="" class="lien-rapide">Histoire du Judo</a>
-                    <a href="" class="lien-rapide">Histoire du Club</a>
-                    <a href="" class="lien-rapide">Poids & Catégories</a>
+                    <a href="html/encyclopedie/histoire-judo.html" class="lien-rapide">Histoire du Judo</a>
+                    <a href="html/encyclopedie/histoire-club.html" class="lien-rapide">Histoire du Club</a>
+                    <a href="html/encyclopedie/categories.html" class="lien-rapide">Poids & Catégories</a>
                 </div>
             </div>
         </nav>
     </header>
     <main>
         <div class="principal-content">
-            <section class="section-activite">
-                <h2 class="titre-activite">ACTIVITÉS DU JUDO-CLUB</h2>
+            <section class="section-principal">
+                <h2 class="titre-section">ACTIVITÉS DU JUDO-CLUB</h2>
                 <div class="activites">
                     <article class="enfants article">
                         <a href="html/membres.html" class="lien-equipe">
@@ -183,7 +179,7 @@
                 <img id="logo-france-judo" class="logo-lien-footer" src="assets/img/accueil/Logo_France_Judo.png" alt="Fédération france judo">
             </a>
             <a id="lien-grand-est" href="https://www.judograndest.fr/" class="social">
-                <img id="logo-grand-est" class="logo-lien-footer" src="assets/img/accueil/LOGO-judo-grand-est-retina-1-1.png" alt="Fédération judo Grand-Est">
+                <img id="logo-grand-est" class="logo-lien-footer" src="assets/img/accueil/LOGO-judo-grand-est-retina-1-1.png" alt="Ligue judo Grand-Est">
             </a>
             <a id="lien-moselle" href="https://www.judo-moselle.fr/" class="social">
                 <img id="logo-moselle" class="moselle" src="assets/img/accueil/moselle-logo.png" alt="Comité de Moselle de judo">
@@ -195,8 +191,7 @@
         <div class="liens-contact">
             <ul class="liste-contact">
                 <li class="contact">
-                    <a href="html/contact.html" class="contact-form"><i
-                            class="fas fa-envelope-open-text icone-contact"></i>Contact</a>
+                    <a href="html/contact.html" class="contact-form"><i class="fas fa-envelope-open-text icone-contact"></i>Contact</a>
                 </li>
                 <li class="contact">
                     <a href="" class="contact-form"><i class="fas fa-hands-helping icone-partenaire"></i>Partenaires</a>
