--- a/html/membres.html
+++ b/html/membres.html
@@ -26,7 +26,7 @@
                 <a href="../index.html" class="lien-nav">Activités</a>
             </div>
             <div class="naviguation page-active">
-                <a href="../html/membres.html" class="lien-actif">Membres</a>
+                <a href="../html/membres.html" class="lien-actif">Comité</a>
             </div>
             <div class="naviguation">
                 <a href="../html/agenda.html" class="lien-nav">Agenda</a>
