--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <h2 class="titre-section">ACTIVITÉS DU JUDO-CLUB</h2>
                 <div class="activites">
                     <article class="enfants article">
-                        <a href="html/membres.html" class="lien-equipe">
+                        <a class="lien-equipe">
                             <img src="assets/img/media/petits-judokas.jpg" alt="des enfants en kimono"
                                 class="img-activite">
                         </a>
@@ -120,7 +120,7 @@
                         </div>
                     </article>
                     <article class="ados article">
-                        <a href="html/membres.html" class="lien-equipe">
+                        <a class="lien-equipe">
                             <img src="assets/img/media/groupe-judokas.jpg" alt="des ados en kimono"
                                 class="img-activite">
                         </a>
@@ -137,7 +137,7 @@
                         </div>
                     </article>
                     <article class="adultes article">
-                        <a href="html/membres.html" class="lien-equipe">
+                        <a class="lien-equipe">
                             <img src="assets/img/media/groupe-adulte.jpg" alt="les judokas de Fénétrange"
                                 class="img-activite">
                         </a>
@@ -154,7 +154,7 @@
                         </div>
                     </article>
                     <article class="senior article">
-                        <a href="html/membres.html" class="lien-equipe">
+                        <a class="lien-equipe">
                             <img src="assets/img/media/senior.jpg" alt="les seniors" class="img-activite">
                         </a>
                         <div class="info-activite">
