animation all pages ok

--- a/html/21-22/medias.html
+++ b/html/21-22/medias.html
@@ -98,8 +98,10 @@
     <main>
         <div class="principal-content">
             <section class="section-principal">
-                <a href="../gallerie.html" class="retour-gallerie"><i class="far fa-arrow-alt-circle-left icone-retour"></i></a>
-                <h2 class="titre-section">LES MÉDIAS</h2>
+                <div class="section-titre">
+                    <a href="../gallerie.html" class="retour-gallerie"><i class="far fa-arrow-alt-circle-left icone-retour"></i></a>
+                    <h2 class="titre-section">LES MÉDIAS</h2>
+                </div>
                 <div id="liste" class="liste">
                     <nav id="trieuse">
                         <button id="nav-button" aria-haspopup="true" tabindex="0" aria-controls="menu2" class="trier">Trier par<i class="fas fa-angle-up chevron visible"></i></button>
