--- a/html/encyclopedie.html
+++ b/html/encyclopedie.html
@@ -99,6 +99,9 @@
         <div class="principal-content">
             <section class="section-principal">
                 <h2 class="titre-section">L'ENCYCLOPÉDIE</h2>
+                <div class="section-encyclo">
+                    
+                </div>
             </section>
         </div>
     </main>
