--- a/html/encyclopedie/histoire-judo.html
+++ b/html/encyclopedie/histoire-judo.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Site du judo club de Fénétrange. Activités du judo-club.">
     <meta name="keywords" content="judo, judogi, judoka, judokas, judokatte, judokattes, ceinture, ceintures, sports, sport, lorraine, moselle, fénétrange">
     <link rel="shortcut icon" href="../../assets/img/ceintures/Judo_red_white_belt.svg" type="image/x-icon">
-    <link rel="stylesheet" href="../../styles/categories.css"/>
+    <link rel="stylesheet" href="../../styles/histoire-judo.css"/>
     <link rel="stylesheet" href="../../assets/Fontawesome/css/all.css">
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
     <title>Histoire du Judo</title>
@@ -98,8 +98,13 @@
     <main>
         <div class="principal-content">
             <section class="section-principal">
-                <a href="../encyclopedie.html" class="retour-gallerie"><i class="far fa-arrow-alt-circle-left icone-retour"></i></a>
-                <h2 class="titre-section">L'HISTOIRE DU JUDO</h2>
+                <div class="section-titre">
+                    <a href="../encyclopedie.html" class="retour-gallerie"><i class="far fa-arrow-alt-circle-left icone-retour"></i></a>
+                    <h2 class="titre-section">L'HISTOIRE DU JUDO</h2>
+                </div>
+                <div class="histoire-judo">
+
+                </div>
             </section>
         </div>
     </main>
