--- a/html/results/results.html
+++ b/html/results/results.html
@@ -98,8 +98,13 @@
     <main>
         <div class="principal-content">
             <section class="section-principal">
-                <a href="../resultats.html" class="retour-gallerie"><i class="far fa-arrow-alt-circle-left icone-retour"></i></a>
-                <h2 class="titre-section">RÉSULTATS DU TOURNOIS DES PETITS-TIGRES</h2>
+                <div class="section-titre">
+                    <a href="../resultats.html" class="retour-gallerie"><i class="far fa-arrow-alt-circle-left icone-retour"></i></a>
+                    <h2 class="titre-section">RÉSULTATS DU TOURNOIS DES PETITS-TIGRES</h2>
+                </div>
+                <div class="classement">
+                    
+                </div>
             </section>
         </div>
     </main>
