--- a/html/grades.html
+++ b/html/grades.html
@@ -100,6 +100,9 @@
         <div class="principal-content">
             <section class="section-principal">
                 <h2 class="titre-section">LES GRADES</h2>
+                <div class="section-grades">
+                    
+                </div>
             </section>
         </div>
     </main>
