--- a/html/grades/techniques.html
+++ b/html/grades/techniques.html
@@ -98,8 +98,13 @@
     <main>
         <div class="principal-content">
             <section class="section-principal">
-                <a href="../grades.html" class="retour-gallerie"><i class="far fa-arrow-alt-circle-left icone-retour"></i></a>
-                <h2 class="titre-section">TECHNIQUES JUDO</h2>
+                <div class="section-titre">
+                    <a href="../grades.html" class="retour-gallerie"><i class="far fa-arrow-alt-circle-left icone-retour"></i></a>
+                    <h2 class="titre-section">TECHNIQUES JUDO</h2>
+                </div>
+                <div class="section-technique">
+
+                </div>
             </section>
         </div>
     </main>
