création page grade

--- a/html/grades.html
+++ b/html/grades.html
@@ -102,9 +102,9 @@
                 <h2 class="titre-section">LES GRADES</h2>
                 <div class="section-grades">
                     <article id="blanche-1deg" class="cadre-technique">
-                        <a href="grades/techniques.html" class="lien-page">
+                        <div class="cadre-img">
                             <img src="../assets/img/ceintures/Judo_white_belt.svg" alt="ceinture Blanche" class="img-ceinture">
-                        </a>
+                        </div>
                         <div class="liste-techniques">
                             <h3 class="titre-techniques">Techniques Ceinture Blanche</h3>
                             <div class="details-techniques">
@@ -142,9 +142,9 @@
                         </div>
                     </article>
                     <article id="blanche-jaune" class="cadre-technique">
-                        <a href="grades/techniques.html" class="lien-page">
+                        <div class="cadre-img">
                             <img src="../assets/img/ceintures/Judo_white-yellow_belt.svg" alt="ceinture Blanche-Jaune" class="img-ceinture">
-                        </a>
+                        </div>
                         <div class="liste-techniques">
                             <h3 class="titre-techniques">Techniques Ceinture Blanche-Jaune</h3>
                             <div class="details-techniques">
@@ -182,7 +182,9 @@
                         </div>
                     </article>
                     <article id="jaune" class="cadre-technique">
-                        <img src="../assets/img/ceintures/Judo_yellow_belt.svg" alt="ceinture Jaune" class="img-ceinture">
+                        <div class="cadre-img">
+                            <img src="../assets/img/ceintures/Judo_yellow_belt.svg" alt="ceinture Jaune" class="img-ceinture">
+                        </div>
                         <div class="liste-techniques">
                             <h3 class="titre-techniques">Techniques Ceinture Jaune</h3>
                             <div class="details-techniques">
@@ -220,9 +222,9 @@
                         </div>
                     </article>
                     <article id="jaune-orange" class="cadre-technique">
-                        <a href="grades/techniques.html" class="lien-page">
+                        <div class="cadre-img">
                             <img src="../assets/img/ceintures/Judo_yellow-orange_belt.svg" alt="ceinture Jaune-Orange" class="img-ceinture">
-                        </a>
+                        </div>
                         <div class="liste-techniques">
                             <h3 class="titre-techniques">Techniques Ceinture Jaune-Orange</h3>
                             <div class="details-techniques">
@@ -260,9 +262,9 @@
                         </div>
                     </article>
                     <article id="orange" class="cadre-technique">
-                        <a href="grades/techniques.html" class="lien-page">
+                        <div class="cadre-img">
                             <img src="../assets/img/ceintures/Judo_orange_belt.svg" alt="ceinture Orange" class="img-ceinture">
-                        </a>
+                        </div>
                         <div class="liste-techniques">
                             <h3 class="titre-techniques">Techniques Ceinture Orange</h3>
                             <div class="details-techniques">
@@ -300,9 +302,9 @@
                         </div>
                     </article>
                     <article id="orange-verte" class="cadre-technique">
-                        <a href="grades/techniques.html" class="lien-page">
+                        <div class="cadre-img">
                             <img src="../assets/img/ceintures/Judo_orange-green_belt.svg" alt="ceinture Orange-Verte" class="img-ceinture">
-                        </a>
+                        </div>
                         <div class="liste-techniques">
                             <h3 class="titre-techniques">Techniques Ceinture Orange-Verte</h3>
                             <div class="details-techniques">
@@ -340,9 +342,9 @@
                         </div>
                     </article>
                     <article id="verte" class="cadre-technique">
-                        <a href="grades/techniques.html" class="lien-page">
+                        <div class="cadre-img">
                             <img src="../assets/img/ceintures/Judo_green_belt.svg" alt="ceinture Verte" class="img-ceinture">
-                        </a>
+                        </div>
                         <div class="liste-techniques">
                             <h3 class="titre-techniques">Techniques Ceinture Verte</h3>
                             <div class="details-techniques">
@@ -380,9 +382,9 @@
                         </div>
                     </article>
                     <article id="verte-bleue" class="cadre-technique">
-                        <a href="grades/techniques.html" class="lien-page">
+                        <div class="cadre-img">
                             <img src="../assets/img/ceintures/Judo_green-blue_belt.svg" alt="ceinture Verte-Bleue" class="img-ceinture">
-                        </a>
+                        </div>
                         <div class="liste-techniques">
                             <h3 class="titre-techniques">Techniques Ceinture Verte-Bleue</h3>
                             <div class="details-techniques">
@@ -420,9 +422,9 @@
                         </div>
                     </article>
                     <article id="bleue" class="cadre-technique">
-                        <a href="grades/techniques.html" class="lien-page">
+                        <div class="cadre-img">
                             <img src="../assets/img/ceintures/Judo_blue_belt.svg" alt="ceinture Bleue" class="img-ceinture">
-                        </a>
+                        </div>
                         <div class="liste-techniques">
                             <h3 class="titre-techniques">Techniques Ceinture Bleue</h3>
                             <div class="details-techniques">
@@ -460,9 +462,9 @@
                         </div>
                     </article>
                     <article id="marron" class="cadre-technique">
-                        <a href="grades/techniques.html" class="lien-page">
+                        <div class="cadre-img">
                             <img src="../assets/img/ceintures/Judo_brown_belt.svg" alt="ceinture Marron" class="img-ceinture">
-                        </a>
+                        </div>
                         <div class="liste-techniques">
                             <h3 class="titre-techniques">Techniques Ceinture Marron</h3>
                             <div class="details-techniques">
@@ -500,9 +502,9 @@
                         </div>
                     </article>
                     <article id="noire-1dan" class="cadre-technique">
-                        <a href="grades/techniques.html" class="lien-page">
+                        <div class="cadre-img">
                             <img src="../assets/img/ceintures/Judo_black_belt.svg" alt="ceinture Noire 1ère Dan" class="img-ceinture">
-                        </a>
+                        </div>
                         <div class="liste-techniques">
                             <h3 class="titre-techniques">Kata Ceinture Noire 1er Dan</h3>
                             <div class="details-techniques">
@@ -540,9 +542,9 @@
                         </div>
                     </article>
                     <article id="noire-2dan" class="cadre-technique">
-                        <a href="grades/techniques.html" class="lien-page">
+                        <div class="cadre-img">
                             <img src="../assets/img/ceintures/Black_belt_2nd_dan.svg" alt="ceinture Noire 2ème Dan" class="img-ceinture">
-                        </a>
+                        </div>
                         <div class="liste-techniques">
                             <h3 class="titre-techniques">Kata Ceinture Noire 2ème Dan</h3>
                             <div class="details-techniques">
@@ -580,9 +582,9 @@
                         </div>
                     </article>
                     <article id="noire-3dan" class="cadre-technique">
-                        <a href="grades/techniques.html" class="lien-page">
+                        <div class="cadre-img">
                             <img src="../assets/img/ceintures/Black_belt_3rd_dan.svg" alt="ceinture Noire 3ème Dan" class="img-ceinture">
-                        </a>
+                        </div>
                         <div class="liste-techniques">
                             <h3 class="titre-techniques">Kata Ceinture Noire 3ème Dan</h3>
                             <div class="details-techniques">
@@ -620,9 +622,9 @@
                         </div>
                     </article>
                     <article id="noire-tech" class="cadre-technique">
-                        <a href="grades/techniques.html" class="lien-page">
+                        <div class="cadre-img">
                             <img src="../assets/img/ceintures/Judo_black_belt.svg" alt="ceinture Noire 1ère Dan" class="img-ceinture">
-                        </a>
+                        </div>
                         <div class="liste-techniques">
                             <h3 class="titre-techniques">Ceinture Noire 1ère Dan Techniques</h3>
                             <div class="details-techniques">
