page technique ok

--- a/html/grades/techniques.html
+++ b/html/grades/techniques.html
@@ -102,9 +102,22 @@
                     <a href="../grades.html" class="retour-gallerie"><i class="far fa-arrow-alt-circle-left icone-retour"></i></a>
                     <h2 class="titre-section">TECHNIQUES JUDO</h2>
                 </div>
-                <div class="section-technique">
-
-                </div>
+                <article class="article-technique">
+                    <h3 class="nom-technique">Morote Seoi Nage</h3>
+                    <video controls src="../../assets/img/techniques/blanche/nage-waza/exemple-vid-marron.mp4" class="video-technique" type="video/mp4" width="998" height="562"></video>
+                    <div class="photos-technique">
+                        <img src="../../assets/img/techniques/blanche/nage-waza/Morote1.png" alt="1ère photo de Morote décomposé" class="img-technique">
+                        <img src="../../assets/img/techniques/blanche/nage-waza/Morote2.png" alt="2ème photo de Morote décomposé" class="img-technique">
+                        <img src="../../assets/img/techniques/blanche/nage-waza/Morote3.png" alt="3ème photo de Morote décomposé" class="img-technique">
+                        <img src="../../assets/img/techniques/blanche/nage-waza/Morote4.png" alt="4ème photo de Morote décomposé" class="img-technique">
+                    </div>
+                    <div class="cadre-description">
+                        <h4 class="titre-descriptif">Description</h4>
+                        <p class="descriptif">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias fugiat eveniet necessitatibus enim laudantium impedit perferendis odio obcaecati dignissimos dolorem assumenda soluta veniam reprehenderit laboriosam porro, consectetur pariatur deserunt veritatis. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum magnam officia totam, laboriosam, ea culpa doloribus aliquam veritatis consequuntur consectetur accusamus id ab impedit deleniti expedita, molestiae libero voluptas fugit?
+                        </p>
+                    </div>
+                </article>
             </section>
         </div>
     </main>
