--- a/html/reglements.html
+++ b/html/reglements.html
@@ -99,7 +99,7 @@
         <div class="principal-content">
             <section class="section-principal">
                 <h2 class="titre-section">LES RÈGLEMENTS</h2>
-                <div id="liste" class="liste">
+                <article id="liste" class="liste">
                     <a class="reglement" download="Reglement-interieur.pdf" href="../assets/documents/reglements/Règlement Intérieur.pdf">
                         <span class="telecharger">Télécharger le Règlement Intérieur</span> 
                         <img src="../assets/documents/reglements/logo-découpé.png">
@@ -128,7 +128,7 @@
                         <span class="telecharger">Télécharger le règlement d'arbitrage National</span> 
                         <img src="../assets/documents/reglements/AppIcon98x98@2x.png">
                     </a>
-                </div>
+                </article>
             </section>
         </div>
     </main>
