page technique ok

--- a/html/grades/techniques.html
+++ b/html/grades/techniques.html
@@ -107,8 +107,11 @@
                     <video controls src="../../assets/img/techniques/blanche/nage-waza/exemple-vid-marron.mp4" class="video-technique" type="video/mp4" width="998" height="562"></video>
                     <div class="photos-technique">
                         <img src="../../assets/img/techniques/blanche/nage-waza/Morote1.png" alt="1ère photo de Morote décomposé" class="img-technique">
+                        <i class="fas fa-angle-right fleche-droite"></i>
                         <img src="../../assets/img/techniques/blanche/nage-waza/Morote2.png" alt="2ème photo de Morote décomposé" class="img-technique">
+                        <i class="fas fa-angle-right fleche-droite"></i>
                         <img src="../../assets/img/techniques/blanche/nage-waza/Morote3.png" alt="3ème photo de Morote décomposé" class="img-technique">
+                        <i class="fas fa-angle-right fleche-droite"></i>
                         <img src="../../assets/img/techniques/blanche/nage-waza/Morote4.png" alt="4ème photo de Morote décomposé" class="img-technique">
                     </div>
                     <div class="cadre-description">
