page encyclo ok

--- a/html/encyclopedie.html
+++ b/html/encyclopedie.html
@@ -100,7 +100,30 @@
             <section class="section-principal">
                 <h2 class="titre-section">L'ENCYCLOPÉDIE</h2>
                 <div class="section-encyclo">
-                    
+                    <article class="article-page">
+                        <a href="encyclopedie/histoire-judo.html" class="lien-page">
+                            <h3 class="titre-lien">L'HISTOIRE DU JUDO</h3>
+                            <div class="bloc-img">
+                                <img src="../assets/img/encyclopedie/histoire-judo.png" alt="portrait de Jigoro Kano" class="image-article">
+                            </div>
+                        </a>
+                    </article>
+                    <article class="article-page">
+                        <a href="encyclopedie/histoire-club.html" class="lien-page">
+                            <h3 class="titre-lien">L'HISTOIRE DU CLUB</h3>
+                            <div class="bloc-img">
+                                <img src="../assets/img/encyclopedie/histoire-club.png" alt="portrait des fondateurs du Judo-Club" class="image-article">
+                            </div>
+                        </a>
+                    </article>
+                    <article class="article-page">
+                        <a href="encyclopedie/categories.html" class="lien-page">
+                            <h3 class="titre-lien">TABLEAU DES POIDS & CATÉGORIES</h3>
+                            <div class="bloc-img">
+                                <img src="../assets/img/encyclopedie/poids-cat.png" alt="portrait de comissaires sportif qui observe la pesée d'un enfant" class="image-article">
+                            </div>
+                        </a>
+                    </article>
                 </div>
             </section>
         </div>
